Tests master protection

--- a/app/src/main/res/layout/increment_counter.xml
+++ b/app/src/main/res/layout/increment_counter.xml
@@ -23,5 +23,6 @@
         android:text="Increment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvCounter" />
+        app:layout_constraintTop_toBottomOf="@id/tvCounter"
+        android:textColor="@color/black"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
